(include dune.config)

(dirs tools client gen assets static local)

(library
 (name webapptpl)
 (modules
  (:standard \ Webapptpl_main))
 (libraries eliom.server ocsigen-start.server ocsipersist-pgsql ocsipersist-pgsql.settings)
 (library_flags
  (:standard -linkall))
 (wrapped false)
 (preprocess
  (pps
   lwt_ppx
   pgocaml_ppx
   js_of_ocaml-ppx_deriving_json
   ocsigen-i18n
   ocsigen-ppx-rpc
   eliom.ppx.server
   --
   --prefix
   Webapptpl_
   --suffix
   _i18n
   --default-module
   Webapptpl_i18n)))

(executables
 (names webapptpl_main)
 (public_names webapptpl)
 (modes
  (byte exe)
  (native exe))
 (libraries
  eliom.server
  ocsigen-start.server
  ocsipersist-pgsql
  ocsigenserver.ext.staticmod
  webapptpl)
 (modules Webapptpl_main)
 (preprocess
  (pps
   lwt_ppx
   pgocaml_ppx
   js_of_ocaml-ppx_deriving_json
   ocsigen-i18n
   ocsigen-ppx-rpc
   eliom.ppx.server
   --
   --prefix
   Webapptpl_
   --suffix
   _i18n
   --default-module
   Webapptpl_i18n)))

(rule
 (target webapptpl_i18n.eliom)
 (deps assets/webapptpl_i18n.tsv)
 (action
  (with-stdout-to
   %{target}
   (with-stdin-from
    %{deps}
    (pipe-stdout
     (run
      ocsigen-i18n-generator
      --languages
      en,fr
      --default-language
      fr
      %{deps})
     (run
      sed
      "1 s/]/[@@deriving json]]\\n[%%shared [@@@ocaml.warning\"-27\"]]/"))))))

(rule
 (target webapptpl_Demo_i18n.eliom)
 (deps assets/webapptpl_Demo_i18n.tsv)
 (action
  (with-stdout-to
   %{target}
   (with-stdin-from
    %{deps}
    (run
     ocsigen-i18n-generator
     --primary
     webapptpl_i18n.tsv
     --languages
     en,fr
     --default-language
     fr)))))

(rule
 (target webapptpl_static_config.eliom)
 (deps webapptpl_static_config.eliom.in)
 (action
  (with-stdout-to
   %{target}
   (with-stdin-from
    webapptpl_static_config.eliom.in
    (run
     sed
     -e
     "s/%%PGPORT%%/%{env:PGPORT=3000}/"
     -e
     "s/%%PGDATABASE%%/%{env:PGDATABASE=webapptpl}/"
     -e
     "s/%%PGDATABASE%%/%{env:PGDATABASE=webapptpl}/"
     -e
     "s/%%PGHOST%%/%{env:PGHOST=webapptpl}/"
     -e
     "s/%%PGUSER%%/%{env:PGUSER=}/"
     -e
     "s/%%PGPASSWORD%%/%{env:PGPASSWORD=webapptpl}/")))))

(subdir
 gen
 (rule
  (deps ../tools/gen_dune.ml)
  (action
   (with-stdout-to
    dune.client
    (run ocaml ../tools/gen_dune.ml)))))

(subdir
 client
 (executables
  (names webapptpl)
  (modes js byte)
  (preprocess
   (pps
    js_of_ocaml-ppx
    lwt_ppx
    ocsigen-i18n
    --
    --prefix
    Webapptpl_
    --suffix
    _i18n
    --default-module
    Webapptpl_i18n))
  (js_of_ocaml
   (build_runtime_flags :standard --enable use-js-string)
   (flags
    :standard
    --enable
    with-js-error
    --enable
    use-js-string
    --no-source-map))
  ; source maps are slow...
  (libraries eliom.client ocsigen-start.client))
 (dynamic_include ../gen/dune.client))

; Main rule:

(rule
 (alias webapptpl)
 (deps
  webapptpl.cma
  client/webapptpl.bc
  client/webapptpl.bc.js
  tools/check_modules.ml)
 (action
  (run ocaml -I +unix -I +str tools/check_modules.ml webapptpl)))
