; (executables
  ; (names main)
  ; (libraries brr)
  ; (modes js))

; (rule
  ; (targets main.js)
  ; (deps main.bc.js)
  ; (action (run cp %{deps} %{targets})))

(executables
 (names main)
 (libraries brr brr.poked)
 (link_flags (:standard -linkall))
 (modes byte))

(rule
 (targets main.js)
 (action
    (run %{bin:js_of_ocaml}
         -I /home/seb/.opam/default/lib/brr -I .main.eobjs/byte ; to see the program's cmis
         --toplevel %{dep:main.bc} -o %{targets})))


(alias
  (name app)
  (deps main.js index.html))
