(include_subdirs qualified)

(executable
 (name main)
 (public_name webapptpl)
 (libraries dream cmdliner toml)
 (preprocess (pps lwt_ppx)))

 ;;(libraries caqti-driver-sqlite3 dream)
 ;;(preprocess (pps lwt_ppx)))


;;(rule
 ;;(targets sql.ml)
 ;;deps sql.eml.ml)
 ;;(action (run dream_eml %{deps} --workspace %{workspace_root})))
